--- a/public/index.html
+++ b/public/index.html
@@ -246,6 +246,8 @@
   
   
 </footer>
-<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "dfec193104b1484dbb51f81cc9097676"}'></script><!-- End Cloudflare Web Analytics -->be
+<!-- Cloudflare Web Analytics -->
+<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "dfec193104b1484dbb51f81cc9097676"}'></script>
+<!-- End Cloudflare Web Analytics -->
 </body>
 </html>
